# linked-list-c

./: .gitignore  .gitignore.save  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: LinkedList.c.EA0E6B70312C76DB.idx  LinkedList.h.EEF26FCF058BDA82.idx  example.c.AA79D21069E52506.idx
inc/: LinkedList.h
src/: LinkedList.c  example.c
